<resources>
    <string name="app_name">YuandaoYang-18046460</string>
    <string name="editView"> </string>
    <string name="button0" >0</string>
    <string name="button1" >1</string>
    <string name="button2" >2</string>
    <string name="button3" >3</string>
    <string name="button4" >4</string>
    <string name="button5" >5</string>
    <string name="button6" >6</string>
    <string name="button7" >7</string>
    <string name="button8" >8</string>
    <string name="button9" >9</string>
    <string name="button10">X</string>
    <string name="button11">*</string>
    <string name="button12">#</string>
    <string name="button13">CALL</string>
</resources>
