<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center|center_horizontal|center_vertical"
            android:layout_weight="5"
            android:background="#212020"
            android:text="@string/editView"
            android:textColor="#ffffff"
            android:textSize="40sp"

            android:freezesText="true" />  <!--number not disappear when rotate screen-->

        <!--delete button-->
        <Button
            android:id="@+id/button10"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="40sp"
            android:textColor="#ffffff"
            android:background="#212020"
            android:layout_weight="1"
            android:text="@string/button10" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="40sp"
            android:textColor="#ffffff"
            android:background="#212020"
            android:layout_weight="1"
            android:text="@string/button1" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="40sp"
            android:textColor="#ffffff"
            android:background="#212020"
            android:layout_weight="1"
            android:text="@string/button2" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="40sp"
            android:textColor="#ffffff"
            android:background="#212020"
            android:layout_weight="1"
            android:text="@string/button3" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="40sp"
            android:textColor="#ffffff"
            android:background="#212020"
            android:layout_weight="1"
            android:text="@string/button4" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="40sp"
            android:textColor="#ffffff"
            android:background="#212020"
            android:layout_weight="1"
            android:text="@string/button5" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="40sp"
            android:textColor="#ffffff"
            android:background="#212020"
            android:layout_weight="1"
            android:text="@string/button6" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="40sp"
            android:textColor="#ffffff"
            android:background="#212020"
            android:layout_weight="1"
            android:text="@string/button7" />

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="40sp"
            android:textColor="#ffffff"
            android:background="#212020"
            android:layout_weight="1"
            android:text="@string/button8" />

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="40sp"
            android:textColor="#ffffff"
            android:background="#212020"
            android:layout_weight="1"
            android:text="@string/button9" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#ffffff"

        android:orientation="horizontal">
        <!--* button-->
        <Button
            android:id="@+id/button11"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="40sp"
            android:textColor="#ffffff"
            android:background="#212020"
            android:layout_weight="1"
            android:text="@string/button11" />

        <Button
            android:id="@+id/button0"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="40sp"
            android:textColor="#ffffff"
            android:background="#212020"
            android:layout_weight="1"
            android:text="@string/button0" />
        <!--# button-->
        <Button
            android:id="@+id/button12"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="40sp"
            android:textColor="#ffffff"
            android:background="#212020"
            android:layout_weight="1"
            android:text="@string/button12" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#ffffff"
        android:orientation="horizontal">
<!--call button-->
        <Button
            android:id="@+id/button13"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textColor="#ffffff"
            android:background="#212020"
            android:textSize="40sp"
            android:layout_weight="1"
            android:text="@string/button13" />
    </LinearLayout>

</LinearLayout>